Fix #6: Incorrect alignment of inputs, buttons, and error block for INLINE FORM orientation

--- a/assets/css/activeform.css
+++ b/assets/css/activeform.css
@@ -1,5 +1,5 @@
 /*!
- * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2013
+ * @copyright Copyright &copy; Kartik Visweswaran, Krajee.com, 2014
  * @package yii2-widgets
  * @subpackage yii2-widget-activeform
  * @version 1.1.0
@@ -14,8 +14,18 @@
     margin-top: -10px;
 }
 
-.form-inline > .form-group {
-    vertical-align: top;
+@media (min-width: 768px) {
+    .form-inline  .form-group, .form-inline  .form-control {
+        vertical-align: top;
+    }
+    
+    .form-inline  .btn-default  {
+        margin:0;
+    }
+
+    .form-inline  .checkbox, .form-inline  .radio {
+        padding-top: 6px;
+    }
 }
 
 .input-multiselect {
